<resources>
    <string name="app_name">MachineTask</string>
    <string name="photo_filter">PhotoFilter</string>
    <string name="choose_gallery">Choose Gallery</string>
    <string name="capture_image">Capture Image</string>
    <string name="storage_permission">You need to provide storage permission</string>
    <string name="camera_storage_permission">You need to provide camera and storage permission</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="crop_image">Crop Image</string>
    <string name="crop">Crop</string>
    <string name="cancel">Cancel</string>
    <string name="filters">Filters</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="filter_image">Filter Image</string>
    <string name="filter">Filter</string>
    <string name="save_image">Save Image</string>
    <string name="ok">Ok</string>
    <string name="save_image_success">Image Saved Successfully!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>