<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FilterActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_4sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/rlFilter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
            android:id="@+id/rlFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@id/ll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/filters"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

            <LinearLayout
                android:id="@+id/llBrightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFilter"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tvBrightness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:minEms="4"
                    android:text="@string/brightness"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sbBrightness"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:max="200"
                    android:progress="100"
                    android:thumbTint="@color/purple" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llContrast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llBrightness"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tvContrast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:minEms="4"
                    android:text="@string/contrast"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sbContrast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:max="20"
                    android:progress="10"
                    android:thumbTint="@color/purple" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llContrast"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tvHue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:minEms="4"
                    android:text="@string/saturation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sbSaturation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:max="256"
                    android:progress="128"
                    android:thumbTint="@color/purple" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/lato_bold"
                android:paddingStart="@dimen/_30sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/purple"
                android:textSize="@dimen/_12ssp"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/_20sdp"
                app:strokeColor="@color/purple"
                app:strokeWidth="@dimen/_1sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/purple"
                android:elevation="@dimen/_4sdp"
                android:fontFamily="@font/lato_bold"
                android:paddingStart="@dimen/_35sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_35sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/filter"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                app:cornerRadius="@dimen/_20sdp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>